--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -3,6 +3,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="{{ page.description | default: site.description }}">
 <link rel="canonical" href="{{ site.url | append: page.url }}">
-<link rel="icon" href="{{ 'assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
+<link rel="icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
 <meta name="robots" content="index, follow">
 {% seo %}
