--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,40 +1,71 @@
 {% assign features = site.data.home.features %}
-<section id="approaches" class="features25-container1 thq-section-padding features25root-class-name">
-  <div class="features25-container2 thq-section-max-width">
-    <div class="features25-thq-tabs-menu-elm">
-      <h2 class="thq-heading-2">{{ features.heading }}</h2>
-      <div class="thq-body-small rich-text">
-        {{ features.description | markdownify }}
-      </div>
-      <div class="features25-thq-tab-horizontal-elm1">
-        <div class="features25-thq-divider-container-elm1">
-          <div class="features25-container3"></div>
-        </div>
-        <div class="features25-thq-content-elm1">
-          <h2 class="features25-thq-feature2-title-elm thq-heading-2">{{ features.items[0].title }}</h2>
-          <div class="thq-body-small rich-text">
-            {{ features.items[0].description | markdownify }}
-          </div>
-        </div>
-      </div>
-      <div class="features25-thq-tab-horizontal-elm2">
-        <div class="features25-thq-divider-container-elm2">
-          <div class="features25-container4"></div>
-        </div>
-        <div class="features25-thq-content-elm2">
-          <h2 class="thq-heading-2">{{ features.items[1].title }}</h2>
-          <div class="thq-body-small rich-text">
-            {{ features.items[1].description | markdownify }}
-          </div>
-        </div>
-      </div>
+{% assign hero = site.data.home.hero %}
+{% assign team = site.data.home.team %}
+{% assign nav = site.data.home.nav %}
+{% assign features_label = '' %}
+{% for item in nav.items %}
+  {% if item.href == '#features' %}
+    {% assign features_label = item.label %}
+  {% endif %}
+{% endfor %}
+{% if features_label == '' %}
+  {% assign features_label = features.heading %}
+{% endif %}
+<section id="features" class="tc-section tc-features">
+  <div class="tc-container">
+    <div class="tc-section-header">
+      {% if features_label != '' %}
+      <p class="tc-eyebrow">{{ features_label }}</p>
+      {% endif %}
+      <h2 class="tc-section-title">{{ features.heading }}</h2>
     </div>
-    <div class="features25-thq-image-container-elm">
-      <img
-        alt="{{ features.image.alt }}"
-        src="{{ features.image.src | relative_url }}"
-        class="features25-image3"
-      >
+
+    <div class="tc-features-layout">
+      <input id="feature-tab-0" class="tc-features-toggle" type="radio" name="features-tabs" checked>
+      <input id="feature-tab-1" class="tc-features-toggle" type="radio" name="features-tabs">
+      <input id="feature-tab-2" class="tc-features-toggle" type="radio" name="features-tabs">
+
+      <div class="tc-features-tabs" role="tablist">
+        <label class="tc-features-tab" for="feature-tab-0" role="tab">
+          <span class="tc-features-dot"></span>
+          <span class="tc-features-title">{{ features_label }}</span>
+          <div class="tc-features-description tc-rich-text">{{ features.description | markdownify }}</div>
+        </label>
+        <label class="tc-features-tab" for="feature-tab-1" role="tab">
+          <span class="tc-features-dot"></span>
+          <span class="tc-features-title">{{ features.items[0].title }}</span>
+          <div class="tc-features-description tc-rich-text">{{ features.items[0].description | markdownify }}</div>
+        </label>
+        <label class="tc-features-tab" for="feature-tab-2" role="tab">
+          <span class="tc-features-dot"></span>
+          <span class="tc-features-title">{{ features.items[1].title }}</span>
+          <div class="tc-features-description tc-rich-text">{{ features.items[1].description | markdownify }}</div>
+        </label>
+      </div>
+
+      <div class="tc-features-panels">
+        <div class="tc-features-panel" data-feature="0">
+          <img
+            alt="{{ features.image.alt }}"
+            src="{{ features.image.src | relative_url }}"
+            class="tc-features-image"
+          >
+        </div>
+        <div class="tc-features-panel" data-feature="1">
+          <img
+            alt="{{ hero.image.alt }}"
+            src="{{ hero.image.src | relative_url }}"
+            class="tc-features-image"
+          >
+        </div>
+        <div class="tc-features-panel" data-feature="2">
+          <img
+            alt="{{ team.members[0].alt }}"
+            src="{{ team.members[0].image | relative_url }}"
+            class="tc-features-image"
+          >
+        </div>
+      </div>
     </div>
   </div>
 </section>
