feat(ui): scroll through feature tabs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 </head>
 <body>
   {{ content }}
+  <script defer src="{{ '/assets/js/scroll-tabs.js' | relative_url }}"></script>
   <script defer src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
 </body>
 </html>
