--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -4,5 +4,7 @@
 <meta name="description" content="{{ page.description | default: site.description }}">
 <link rel="canonical" href="{{ site.url | append: page.url }}">
 <link rel="icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
+<link rel="icon" href="{{ '/assets/images/favicon.svg' | relative_url }}" type="image/svg+xml">
+<link rel="apple-touch-icon" href="{{ '/assets/images/favicon-512.png' | relative_url }}">
 <meta name="robots" content="index, follow">
 {% seo %}
